--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShopApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activities.CheckoutActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.ShopApp.NoActionBar" />
         <activity
             android:name=".activities.AddEditAddressActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.ShopApp.NoActionBar"/>
+            android:theme="@style/Theme.ShopApp.NoActionBar" />
         <activity
             android:name=".activities.AddressListActivity"
             android:exported="false"
